# audiopipe

./: .gitignore  Cargo.toml  Makefile  README.md  receiver.sh  sender.sh  test.dot
.github/workflows/: rust.yml
audiopipe-bin/: Cargo.toml  README.md
audiopipe-bin/src/: cli.rs  main.rs
audiopipe-core/: Cargo.toml  README.md
audiopipe-core/src/: audio.rs  control.rs  lib.rs  mixer.rs  splitter.rs  streamer.rs  tcp.rs  udp.rs
audiopipe-core/src/control/: client.rs  mod.rs  packet.rs  server.rs
audiopipe-core/src/streamer/: mod.rs  packet.rs  receiver.rs  sender.rs
audiopipe-core/tests/: control_test.rs
src/: args.rs  lib.rs  receiver_tui.rs  splitter.rs  streamer.rs  tui.rs
src/receiver/: args.rs  mod.rs  tui.rs
src/sender/: args.rs  mod.rs  tui.rs
test-app/: package.json
test-app/src-tauri/: Cargo.toml  tauri.conf.json
test-app/src-tauri/src/: lib.rs
uastreamer/: Cargo.toml  README.md
uastreamer/src/: args.rs  audio.rs  cli.rs  config.rs  control.rs  lib.rs  mixer.rs  scommand.rs  splitter.rs  streamer.rs  streamer_config.rs  tcp.rs  tui.rs  ualog.rs  udp.rs
uastreamer/src/async_comp/: audio.rs  mixer.rs  mod.rs  tcp.rs  udp.rs
uastreamer/src/components/: control.rs  cpal.rs  mod.rs  streamer.rs  udp.rs
uastreamer/src/components/tokio/: audio.rs  tcp.rs  udp.rs
uastreamer/src/comps/: cli.rs  mod.rs  tcp.rs  udp.rs
uastreamer/src/pooled/: cpal.rs  mod.rs  udp.rs
