[package]
name = "audio-streamer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
bytemuck = "1.22.0"
clap = "4.5.37"
cpal = "0.15.3"
crossterm = "0.29.0"
ratatui = "0.29.0"
ringbuf = "0.4.8"

[dev-dependencies]
rand = "0.9.1"

[[bin]]
name = "sender"
path = "src/bin/sender.rs"
