[package]
name = "audiopipe-core"
version = "0.3.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
bincode2 = "2.0.1"

bytemuck = "1.22.0"
cpal = "0.15.3"
ctrlc = "3.4.6"
env_logger = "0.11.8"
hound = "3.5.1"
log = "0.4.27"
once_cell = "1.21.3"
rand = "0.9.1"

ringbuf = "0.4.8"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

tokio = { version = "1.47.1", features = ["full"] }
uuid = { version = "1.17.0", features = ["v4"] }
